# MultiHopKG

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  data_preparation.py  experiment-emb.sh  experiment-rs.sh  experiment.sh  flake.nix  mlm_training.py  pyproject.toml  requirements.txt  script_save_data.sh  server exited unexpectedly
configs/: fb15k-237-complex.sh  fb15k-237-distmult.sh  fb15k-237-rs.sh  fb15k-237.sh  kinship-conve.sh  kinship-distmult.sh  kinship-rs.sh  nell-995-conve.sh  nell-995-distmult.sh  umls-conve.sh  umls-rs.sh  wn18rr-complex.sh  wn18rr-distmult.sh  wn18rr-rs.sh
configs/salesforce_configs/: fb15k-237-conve.sh  kinship-complex.sh  kinship.sh  nell-995-complex.sh  nell-995-rs.sh  nell-995.sh  umls-complex.sh  umls-distmult.sh  umls.sh  wn18rr-conve.sh  wn18rr.sh
multihopkg/: data_utils.py  environments.py  eval.py  experiments.py  hyperparameter_range.py  knowledge_graph.py  language_models.py  learn_framework.py  logging.py  vector_search.py
multihopkg/emb/: emb.py  fact_network.py
multihopkg/error_analysis/: ablation_study_analysis.ipynb  false_negative_plot.ipynb  nell_results_analysis.ipynb  performance_by_relation_type.ipynb
multihopkg/models/: construction.py
multihopkg/rl/graph_search/: beam_search.py  cpg.py  pg.py  pn.py  pn_v2.py  rs_pg.py  soft_rewards.py
multihopkg/run_configs/: alpha.py
multihopkg/utils/: convenience.py  data_splitting.py  ops.py  setup.py
src/: data_utils.py  eval.py  experiments.py  hyperparameter_range.py  knowledge_graph.py  learn_framework.py  parse_args.py
src/emb/: emb.py  fact_network.py
src/error_analysis/: analysis_modules.py  error_analysis.py
src/rl/graph_search/: beam_search.py  pg.py  pn.py  rs_pg.py
src/utils/: ops.py  vis.py
