[tool.poetry]
name = "multihopkg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
transformers = "^4.44.2"
pandas = "^2.2.3"
torch = {version = "^2.4.1+cu121", source = "pytorch_gpu"}
scikit-learn = "^1.5.2"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
