[tool.poetry]
name = "multihopkg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
transformers = "^4.44.2"
pandas = "^2.2.3"
torch = {version = "^2.4.1+cu121", source = "pytorch_gpu"}
scikit-learn = "^1.5.2"
pyarrow = "^18.0.0"
faiss-cpu = "1.9.0"
wandb = "^0.18.6"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
rich = "^13.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
